--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "4.3.1",
+    "bootstrap-vue": "^2.1.0",
     "cookie-machine": "^0.1.1",
     "core-js": "^3.4.3",
     "pixi-sound": "^3.0.4",
     "pixi.js": "^5.2.0",
-    "vue": "^2.6.10",
+    "vue": "2.6.10",
     "vue-router": "^3.1.3",
     "vue2-dropzone": "^3.6.0"
   },
