--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "pixi-sound": "^3.0.4",
     "pixi.js": "^5.2.0",
     "vue": "2.6.10",
+    "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vue2-dropzone": "^3.6.0"
   },
