--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -14,5 +14,6 @@ server {
                 root /dist;
                 index index.html index.htm;
                 include /etc/nginx/mime.types;
+                try_files $uri $uri/ /index.html;
         }
 }
