--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "vue": "2.6.10",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
-    "vue2-dropzone": "^3.6.0"
+    "vue2-dropzone": "^3.6.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
